--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "select2": "~3.4.5",
     "simple-form": "*",
     "spinjs": "~1.3.3",
-    "requirejs-domready": "~2.0.1"
+    "requirejs-domready": "~2.0.1",
+    "angular-animate": "^1.5.7"
   },
   "devDependencies": {
     "angular-bindonce": "~0.3.1",
