--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "simple-form": "*",
     "spinjs": "~1.3.3",
     "requirejs-domready": "~2.0.1",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angucomplete-alt": "^2.4.1"
   },
   "devDependencies": {
     "angular-bindonce": "~0.3.1",
