--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-html2js": "~0.2.3",
     "grunt-open": "~0.2.0",
+    "grunt-replace": "^1.0.1",
     "grunt-usemin": "~0.1.9",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
