--- a/package.json
+++ b/package.json
@@ -20,27 +20,12 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-filerev": "^2.3.1",
+    "grunt-filerev-replace": "^0.1.5",
     "grunt-html2js": "~0.2.3",
     "grunt-open": "~0.2.0",
     "grunt-replace": "^1.0.1",
     "grunt-usemin": "~0.1.9",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-file-tree": "^0.4.0",
-    "gulp-html2js": "^0.2.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-ng-html2js": "^0.2.0",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-rev": "^6.0.1",
-    "gulp-rev-collector": "^1.0.2",
-    "gulp-rev-css-url": "^0.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-strip-debug": "^1.1.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-usemin": "^0.3.16",
     "matchdep": "~0.1.1",
     "morgan": "~1.3.1"
   },
