--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-replace": "^1.0.1",
     "grunt-usemin": "~0.1.9",
     "matchdep": "~0.1.1",
-    "morgan": "~1.3.1"
+    "morgan": "~1.3.1",
+    "webpack": "^2.3.3"
   },
   "engines": {
     "node": ">=0.8.0"
