--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt-contrib-imagemin": "0.1.2",
     "grunt-contrib-jade": "0.5.0",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-filerev": "^2.3.1",
