活动优惠券

--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "author": "",
   "license": "ISC",
   "homepage": "https://bitbucket.org/rrlt/huijiame_admin#readme",
-  "description": ""
+  "description": "还没有描述信息"
 }
