--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "connect-livereload": "~0.3.0",
     "del": "^2.1.0",
     "express": "~3.4.7",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "0.4.0",
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-compass": "~0.2.0",
