--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "grunt-open": "~0.2.0",
     "grunt-replace": "^1.0.1",
     "grunt-usemin": "~0.1.9",
+    "html-loader": "^0.5.5",
     "matchdep": "~0.1.1",
     "morgan": "~1.3.1",
-    "webpack": "^2.3.3"
+    "ngtemplate-loader": "^2.0.1",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-notifier": "^1.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
@@ -38,7 +42,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
