--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config webpack.config.js"
+    "dev": "webpack --config config/webpack.config.js"
   },
   "repository": {
     "type": "git",
